--- a/templates/inventory.tmpl
+++ b/templates/inventory.tmpl
@@ -23,7 +23,7 @@ apps_repos_local=${apps_repos_local}
 gitops_profile=${gitops_profile}
 gitops_recipe=${gitops_recipe}
 gitops_infra=${gitops_infra}
-ocs_rwx_storage_class=${ocs_rwx_storage_class}
+rwx_storage_class=${rwx_storage_class}
 
 [bastion]
 127.0.0.1
